Adding collection tests

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -93,7 +93,7 @@
       
     ],
     function(){
-      require(['src/js/models/tests/edit-story-spec.js','src/js/models/tests/edit-task-spec.js','src/js/models/tests/story-spec.js','src/js/models/tests/task-spec.js','src/js/views/tests/edit-story-spec.js','src/js/views/tests/edit-task-spec.js','src/js/views/tests/story-spec.js','src/js/views/tests/task-spec.js','.grunt/grunt-contrib-jasmine/reporter.js'], function(){
+      require(['src/js/collections/tests/stories-spec.js','src/js/collections/tests/tasks-spec.js','src/js/models/tests/edit-story-spec.js','src/js/models/tests/edit-task-spec.js','src/js/models/tests/story-spec.js','src/js/models/tests/task-spec.js','src/js/views/tests/edit-story-spec.js','src/js/views/tests/edit-task-spec.js','src/js/views/tests/story-spec.js','src/js/views/tests/task-spec.js','.grunt/grunt-contrib-jasmine/reporter.js'], function(){
         startTests();
       });
     }
