Adding time formatter function

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,9 +12,7 @@
 		<button class="add-story-button" type="button">New story</button>
 	</div>
 
-	<div class="overlay">
-
-	</div>
+	<div class="overlay"></div>
 
 	<div class="underlay"></div>
 	
